--- a/app/globals.css
+++ b/app/globals.css
@@ -543,3 +543,52 @@ div:where(.swal2-container).swal2-noanimation {
 .buttonSecondDarkDisabled {
   box-shadow: inherit;
 }
+/* Stylos para ajustar tamaño en el esqueleto de las card */
+
+.custom-grid {
+  grid-template-columns: repeat(3, 400px); 
+}
+@media (min-width: 1200px) {
+  .custom-grid {
+    grid-template-columns: repeat(3, 400px);
+  }
+}
+
+@media (max-width: 1200px) {
+  .custom-grid {
+    grid-template-columns: repeat(3, 310px);
+  }
+}
+
+@media (max-width: 992px) {
+  .custom-grid {
+    grid-template-columns: repeat(2, 420px);
+  }
+}
+@media (max-width: 854px) {
+  .custom-grid {
+    grid-template-columns: repeat(2, 390px);
+  }
+}
+@media (max-width: 820px) {
+  .custom-grid {
+    grid-template-columns: repeat(2, 370px);
+  }
+}
+@media (max-width: 768px) {
+  .custom-grid {
+    grid-template-columns: repeat(2, 350px);
+  }
+}
+@media (max-width: 540px) {
+  .custom-grid {
+    grid-template-columns: repeat(2, 235px);
+  }
+}
+
+@media (max-width: 480px) {
+  .custom-grid {
+    grid-template-columns: repeat(1, 100%);
+  }
+}
+
