feat: responsive principal de la vista terminado

--- a/app/globals.css
+++ b/app/globals.css
@@ -48,11 +48,11 @@ body {
 }*/
 
 .container-blur {
-  @apply absolute flex h-full w-full justify-center overflow-hidden;
+  @apply absolute flex h-full min-h-[1000px] w-full justify-center overflow-hidden;
 }
 
 .box {
-  @apply h-full w-full rounded-full;
+  @apply max-h-[1200px] w-full rounded-full h-full;
   animation: spin 30s infinite linear;
   display: flex;
   justify-content: center;
