--- a/app/globals.css
+++ b/app/globals.css
@@ -47,6 +47,12 @@ body {
 
 }*/
 
+@layer utilities {
+  .mask-gradient-popup {
+    mask-image: linear-gradient(to right, transparent, black 5%, black 95%, transparent);
+  }
+}
+
 .container-blur {
   @apply absolute flex h-full min-h-[1000px] w-full justify-center overflow-hidden;
 }
