--- a/app/globals.css
+++ b/app/globals.css
@@ -571,3 +571,47 @@ div:where(.swal2-container).swal2-noanimation {
     font-family: 'Open Sans', sans-serif;
   }
 }
+
+/**
+ *   1. `fadeIn`: 
+ *      - Realiza una transición de opacidad y posición vertical.
+ *      - Inicio: `opacity: 0` y desplazamiento hacia abajo (`translateY(20px)`).
+ *      - Fin: `opacity: 1` y posición original (`translateY(0)`).
+ *      - Duración: 0.5 segundos.
+ *   2. `lineGrowDown`: 
+ *      - Anima la altura de una línea, simulando que crece hacia abajo.
+ *      - Inicio: `height: 0` y posición inicial en la parte inferior.
+ *      - Fin: `height: 30px` y posición ajustada hacia abajo.
+ * 
+ * - **Clase utilitaria**:
+ *   - `.animate-fade-in`: 
+ *     - Aplica la animación `fadeIn` con duración de 0.5 segundos.
+ *     - La animación se ejecuta una sola vez hacia adelante (`forwards`).
+ */
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.animate-fade-in {
+  opacity: 0;
+  animation: fadeIn 0.5s forwards; 
+}
+
+@keyframes lineGrowDown {
+  from {
+    height: 0;
+    bottom: 0;
+  }
+  to {
+    height: 30px;
+    bottom: -30px;
+  }
+}
