--- a/app/globals.css
+++ b/app/globals.css
@@ -433,6 +433,10 @@ div:where(.swal2-icon).swal2-info {
   gap: 20px; /* Agrega espacio entre elementos internos */
 }
 
+.custom-container-payment{
+  @apply p-0;
+}
+
 /**Button Second**/
 .buttonSecond {
   outline: none;
