--- a/app/globals.css
+++ b/app/globals.css
@@ -682,21 +682,19 @@ div:where(.swal2-container).swal2-noanimation {
 }
 
 .mask-nav {
-  -webkit-mask-image: url('../public/images/Vector_1.svg');
-  mask-image: url('../public/images/Vector_1.svg');
-  -webkit-mask-repeat: no-repeat;
-  mask-repeat: no-repeat;
+  clip-path: path(
+    'M78.429 3.5C72.2493 2.05182 68.589 1.80867 62.2432 2L56 2.5L50.5 3.5L47 4.5L40.5 7L35.5 10L31 13.5L27.5 17L23 23L20 28L17.5 33L15 39L11 50C6.5 64.5 0 64 0 64V0H128.5V64C128.5 64 124.963 64 122.94 61.986C120.917 59.9721 119.905 58.4616 117.882 52.9233C115.859 47.3849 114.847 42.8535 112.824 37.8187C110.801 32.7838 109.798 29.4567 106.754 24.5C103.214 18.735 101.696 16.5 96.6381 12C93.7349 9.4171 89.051 7.00697 86.5219 6C83.9929 4.99303 81.6521 4.25531 78.429 3.5Z'
+  );
 
-  -webkit-mask-position: center;
-  mask-position: center;
+  transform: scaleX(1.02);
+  transform-origin: center;
 }
 
 .mask-icon {
-  -webkit-mask-image: url('../public/images/Mascara_icon.png');
-  mask-image: url('../public/images/Mascara_icon.png');
-  -webkit-mask-repeat: no-repeat;
-  mask-repeat: no-repeat;
-  mask-size: contain;
-  -webkit-mask-size: contain;
-  mask-position: top center;
+  clip-path: path(
+    'M203 0V66.25C203 66.25 200.756 62.7424 199 60.75C194.452 55.5897 189.5 52.75 184 50.75C178.513 48.7547 173.644 48.75 173.621 48.75H30C30 48.75 25 48.75 18.5 50.75C14.8605 51.8698 11 54.75 11 54.75C8 56.75 6.5 58.25 5 59.75C2.56483 62.7817 0 66.25 0 66.25V0H203Z'
+  );
+
+  transform: scaleX(1.015);
+  transform-origin: center;
 }
