--- a/app/globals.css
+++ b/app/globals.css
@@ -491,14 +491,14 @@ div:where(.swal2-container) div:where(.swal2-popup) {
   display: flex;
   flex-direction: column;
   gap: 20px;
-
+  /* Agrega espacio entre elementos internos */
 }
 
 .custom-container-payment {
   @apply p-0;
 }
 
-
+/**Button Second**/
 .buttonSecond {
   outline: none;
   box-shadow:
@@ -507,7 +507,7 @@ div:where(.swal2-container) div:where(.swal2-popup) {
   transition: all 0.3s cubic-bezier(0.15, 0.83, 0.66, 1);
 }
 
-.buttonSecond:hover:not(:disabled) { 
+.buttonSecond:hover {
   box-shadow:
     0px 0px 0px 2px #ffffff,
     0px 0px 0px 4px #91aeec;
@@ -518,23 +518,21 @@ div:where(.swal2-container).swal2-noanimation {
   backdrop-filter: blur(5px);
 }
 
-
+/*  animaciones de los botones */
 
 .buttonSecondDark {
   outline: none;
   transition: all 0.3s cubic-bezier(0.15, 0.83, 0.66, 1);
 }
 
-.buttonSecondDark:hover:not(:disabled) { 
+.buttonSecondDark:hover {
   box-shadow:
     0px 0px 0px 2px #252526,
     0px 0px 0px 4px #ebe7e0;
 }
 
-
-.buttonSecond:disabled,
-.buttonSecondDark:disabled {
-  box-shadow: none !important;
+.buttonSecondDarkDisabled {
+  box-shadow: inherit;
 }
 
 .confirmAlert {
