--- a/app/globals.css
+++ b/app/globals.css
@@ -811,3 +811,7 @@ div:where(.swal2-container).swal2-noanimation {
   border-radius: 100%;
   border: 1px solid transparent;
 }
+
+.navbar-landing > div {
+  height: 100%;
+}
