feat(darkMode): adapted dropdowns to dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -523,6 +523,10 @@ body {
   padding-right: 0px !important;
 }
 
+.dark body {
+  --sb-thumb-color: #90B0FE;
+}
+
 body::-webkit-scrollbar {
   width: var(--sb-size);
 }
