habia un bug que se veia el boton oculto de hamburguesa en dispositivos pequeños, se hacen muchas pruebas, finalmente se agregaron unas lineas de codigo en globalcss con overflow-x hidden. esto segun la documentacion de flowbitesoluciona el problema. se vuenven para atras los cambios en navbarlanding para dejarla como estaba antes, se cambia globalcss y se soluciona el problema

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,12 @@
 html {
   -webkit-text-size-adjust: 100%;
 }
+/* --- FIX Flowbite Drawer horizontal scroll --- */
+html,
+body {
+  overflow-x: hidden;
+}
+
 
 @font-face {
   font-family: 'OpenSans';
